--- a/.github/workflows/github_workflows_build.yml
+++ b/.github/workflows/github_workflows_build.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 
 on:
     push:
-        branches: [main]
+        branches: [main, master]
     workflow_dispatch:
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v5
               with:
-                  python-version: 3.10
+                  python-version: 3.11
 
             - name: Install requirements
               run: |
