--- a/.github/workflows/github_workflows_pages_deploy.yml
+++ b/.github/workflows/github_workflows_pages_deploy.yml
@@ -1,20 +1,23 @@
 name: Trigger Pages Deploy
 
 on:
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
-  trigger:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
+    trigger:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout gh-pages branch
+              uses: actions/checkout@v4
+              with:
+                  ref: gh-pages
 
-      - name: Make empty commit
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git commit --allow-empty -m "Trigger Pages deploy"
-          git push
+            - name: Configure Git
+              run: |
+                  git config user.name github-actions
+                  git config user.email github-actions@github.com
+
+            - name: Make empty commit and push
+              run: |
+                  git commit --allow-empty -m "Trigger Pages deploy"
+                  git push
